--- a/source/_posts/大数据学习.md
+++ b/source/_posts/大数据学习.md
@@ -22,7 +22,7 @@ date: 2024-01-18 00:00:00
 其实依靠大数据的还有很多很多，这里不一一举例子。
 
 ### 数据采集
-![](/images/big_data/data_collect.jpg)
+![](/images/big_data/data_collect.png)
 
 在数据采集过程中，Web/Android/IOS等数据，通过调用后端API把采集的用户行为数据存储到Kafaka。
 这里的Load Balance前置，是防止大量请求做的负载均衡，每个公司有自己的负载均衡，如果没有，可以使用云服务商的或nginx。
@@ -35,7 +35,7 @@ Kafaka是大数据日志采集用的最多的，以下是它的优点：
 * 后端API需要使用异步投递到Kafaka，不处理业务，加速响应请求，这里也体现了业务解耦的重要性。
 
 ## 数据存储
-![](/images/big_data/data_save.jpg)
+![](/images/big_data/data_save.png)
 
 这里大数据存储使用Hadoop。图中Customers从Kafaka消息队列里拿到数据、计算、spark整理字段、spark使用hive通过sql的形式插入数据到HDFS。
 Hadoop优点：
@@ -52,7 +52,7 @@ Hadoop优点：
 * 使用spark submit提交的数据，在执行完成后，其中相关的应用程序和包会被当作零时文件清除，通过释放存储空间来保持HDFS的整洁。
 
 ## 数据分析
-![](/images/big_data/data_analysis.jpg)
+![](/images/big_data/data_analysis.png)
 
 在上一次数据存储过程中，经过一次数据整理后的数据存储到HDFS中，目前存储在HDFS的数据基本满足可读性。
 但对于完整的数据分析远远不够。这里需要对数据进行二次或多次数据分析处理。
@@ -67,7 +67,7 @@ Hadoop优点：
 经过一次，二次，多次的数据分析，形成业务所需要的数据。这里一般是按照年、月、日、时、分形成的统计数据。把分析好的数据存储到MySQL中，方便数据展示。
 
 ## 数据可视化和数据接口
-![](/images/big_data/data_visualization_interface.jpg)
+![](/images/big_data/data_visualization_interface.png)
 
 经历过一次或多次数据分析，完善的统计数据已经存储到MySQL了，这个时候需要把数据通过网页展示出来，方便数据查看。
 同时这个数据也可以通过API接口，提供给第三方服务使用。
