feat: add more and modify font

--- a/source/_posts/白猫灰猫黑猫算法.md
+++ b/source/_posts/白猫灰猫黑猫算法.md
@@ -15,6 +15,7 @@ date: 2020-05-16 00:00:00
 
 * 问题1: 有一个数组，数组中存储的是 Cat 对象，每个 Cat 对象有多个成员变量，其中一个代表颜色 color，有两个值白色和黑色，要求编写一个函数将数组中所有的白猫都放到黑猫前面
 * 问题2: 如果猫的颜色有三种，白色、黑色、灰色，编写一个函数将数组中白猫放到最前面，灰猫放到中间，黑猫放到最后面，比如：原来数组为 黑白灰白白黑灰灰，经过排序之后白白白灰灰黑黑
+<!-- more -->
 * 问题3: 不仅白灰黑之间按顺序排列，而且白猫，灰猫，黑猫各自内部原来的先后顺序也不能变
 
 ### 思考   
