--- a/source/_posts/管理系统之用户登录.md
+++ b/source/_posts/管理系统之用户登录.md
@@ -16,6 +16,7 @@ date: 2019-05-15 00:00:00
 * 修改flask session（保存在内存中）存储到redis
 * 参考flask_session 修改save_session，只在用户登录时存储当前session到redis（避免其他访问存储session）
 * 在用户登录的接口中，清除当前用户存储在redis中的其他session
+<!-- more -->
 * 用户每次访问判断当前用户session和redis中是否一致，实现同一个账号只能一处登录
 
 ## 插件
