--- a/source/_posts/方法论思考.md
+++ b/source/_posts/方法论思考.md
@@ -9,6 +9,7 @@ date: 2021-04-01 00:00:00
 
 ## 起因
 今天突然想到曾经的一场面试，问题大概是这样的 "微博的热点功能是怎么设计的？"，当时我想了很多，主要是数据库选择、数据结构设计、并发的问题。感觉回答的很散乱。今天突然想到了，我没有理解到问题的本质，如果我们把问题核心提出来，"xxx是怎么设计的？"，核心思想就是**设计（系统设计）**，系统设计问题的回答方法->**4S分析法**。这让我想到了方法论，自我方法论。
+<!-- more -->
 
 ## 自我方法论的产生
 
