--- a/source/_posts/大数据学习.md
+++ b/source/_posts/大数据学习.md
@@ -8,7 +8,7 @@ date: 2024-01-18 00:00:00
 ---
 
 ## 起始
-由于目前在NAVER music data部门，虽然目前只做了大数据可视化这一块工作。但是因自身对整个数据流的兴趣，从而产生了对整个大数据架构的兴趣和学习。
+由于目前在music data部门，虽然目前只做了大数据可视化这一块工作。但是因自身对整个数据流的兴趣，从而产生了对整个大数据架构的兴趣和学习。
 其中有错误的地方，希望读者指正，在后期的学习过程中，会继续更新这篇文章。
 以下是我理解的大数据的一种可行性基础架构。
 <!-- more -->
